// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render HomeButton (external) 1`] = `
<section
  id="HomeButton"
>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    className="homeButton__logo"
    data-show={false}
    to="/"
  >
    B
  </NavLink>
</section>
`;

exports[`Render HomeButton (internal) 1`] = `
<section
  id="HomeButton"
>
  <a
    className="homeButton__logo"
    data-show={false}
    href="#app"
  >
    B
  </a>
</section>
`;
